objects/Other_EHS_CSR_Certificate__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Other_EHS_CSR_Disclosures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CertificateType__c</fullName>
        <formula>Text(Certificate_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DocumentType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_Title__c</fullName>
        <label>Document Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_Type__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>REACH Article 33 SVHC Declaration</fullName>
                </value>
                <value>
                    <fullName>Presentation</fullName>
                </value>
                <value>
                    <fullName>Brochure</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Material Declaration</fullName>
                </value>
                <value>
                    <fullName>CMRT (Conflict Minerals Declaration)</fullName>
                </value>
                <value>
                    <fullName>BizSafe Star</fullName>
                </value>
                <value>
                    <fullName>ISO</fullName>
                </value>
                <value>
                    <fullName>ISO 14001</fullName>
                </value>
                <value>
                    <fullName>ISO 15048</fullName>
                </value>
                <value>
                    <fullName>ISO 50001</fullName>
                </value>
                <value>
                    <fullName>ISO 9001</fullName>
                </value>
                <value>
                    <fullName>ISO TS16949</fullName>
                </value>
                <value>
                    <fullName>ISO14001 and OHSAS18001</fullName>
                </value>
                <value>
                    <fullName>ODS-Free</fullName>
                </value>
                <value>
                    <fullName>OHSAS</fullName>
                </value>
                <value>
                    <fullName>OHSAS 18001</fullName>
                </value>
                <value>
                    <fullName>SONY Green Partners</fullName>
                </value>
                <value>
                    <fullName>TS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Occurrence__c</fullName>
        <label>Date of Occurrence</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FAB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FAB</label>
        <referenceTo>FAB__c</referenceTo>
        <relationshipName>Other_EHS_CSR_Disclosures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fab_Assign__c</fullName>
        <formula>FAB__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fab Assign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fabs__c</fullName>
        <label>Fab</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CORPORATE</fullName>
                </value>
                <value>
                    <fullName>FAB 1</fullName>
                </value>
                <value>
                    <fullName>FAB 2</fullName>
                </value>
                <value>
                    <fullName>FAB 3/5</fullName>
                </value>
                <value>
                    <fullName>FAB 3E</fullName>
                </value>
                <value>
                    <fullName>FAB 6</fullName>
                </value>
                <value>
                    <fullName>FAB 7/7G</fullName>
                </value>
                <value>
                    <fullName>FAB 8</fullName>
                </value>
                <value>
                    <fullName>Fab 9</fullName>
                </value>
                <value>
                    <fullName>Fab 10</fullName>
                </value>
                <value>
                    <fullName>Non-Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Other Manufacturing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FileIdPublish__c</fullName>
        <label>FileIdPublish</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileId__c</fullName>
        <label>FileId</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Description__c</fullName>
        <label>Issue Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <formula>&apos;QC&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <label>Other EHS / CSR / BCM Information</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Certificate_Title__c</columns>
        <columns>Fabs__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Stage__c</columns>
        <columns>Expiry_Date__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Issue_Description__c</columns>
        <columns>Date_of_Occurrence__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BCM_Queue_Other_EHS_CSR_Certificate</fullName>
        <filterScope>Queue</filterScope>
        <label>BCM Queue</label>
        <queue>BCM_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Impact_Notification_Other_EHS_CSR_Certificate</fullName>
        <filterScope>Queue</filterScope>
        <label>Impact Notification</label>
        <queue>Impact_Notification</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Other_EHS_CSR_Queue_Other_EHS_CSR_Certificate</fullName>
        <filterScope>Queue</filterScope>
        <label>Other EHS/CSR Queue</label>
        <queue>Other_EHS_CSR_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>DOC-{000}</displayFormat>
        <label>Doc No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Other EHS / CSR / BCM Information</pluralLabel>
    <recordTypes>
        <fullName>BeforeApproval</fullName>
        <active>true</active>
        <description>Standard EHS &amp; CSR Disclosures frequently needed by customers - For use by customers and customer facing teams. To contain  only non-confidential and generic (pdf) documents.</description>
        <label>Other EHS/CSR Disclosures</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Continuity_Mgmt</fullName>
        <active>true</active>
        <description>Confidential information (brochures, presentations) summarizing GLOBALFOUNDRIES business continuity programs for customers.  For use by customer engagement representatives.</description>
        <label>Business Continuity Mgmt</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Continuity_Mgmt_Approved</fullName>
        <active>true</active>
        <label>Business Continuity Mgmt Approved</label>
    </recordTypes>
    <recordTypes>
        <fullName>Impact_Notification</fullName>
        <active>true</active>
        <description>Information for customers regarding impact to GLOBALFOUNDRIES operations due to specific events (such as supply chain interruptions, severe weather, significant site-level emergencies).</description>
        <label>Impact Notification</label>
    </recordTypes>
    <recordTypes>
        <fullName>Impact_Notification_Approved</fullName>
        <active>true</active>
        <label>Impact Notification Approved</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other_EHS_CSR_Approved</fullName>
        <active>true</active>
        <label>Other EHS CSR Approved</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Approver_required_in_case_of_approval</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISBLANK(Approver__c),Approval_Required__c==true)</errorConditionFormula>
        <errorMessage>Approver is required for Approval process</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Expiration_Date_cant_be_less_than_today</fullName>
        <active>true</active>
        <description>Expiration Date cant be less than today</description>
        <errorConditionFormula>Expiry_Date__c&lt;=TODAY()</errorConditionFormula>
        <errorDisplayField>Expiry_Date__c</errorDisplayField>
        <errorMessage>Expiration Date cant be less than today or today</errorMessage>
    </validationRules>
</CustomObject>